<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:padding="@dimen/activity_vertical_margin">
    <TextView
        android:id="@+id/txTitleHidden"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/transparent"
        android:text="@string/access_dialog_title"/>
    <Button
        android:id="@+id/btnClose"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/ic_close"
        android:contentDescription="@string/close"/>
    <Button
        android:id="@+id/enterCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:fontFamily="@fonts/EkMukta-SemiBold"
        android:layout_centerHorizontal="true"
        android:text="@string/enter_category"
        android:textSize="18sp"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enterCategory">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/ivlike"
                        android:layout_width="82dp"
                        android:layout_height="76dp"
                        android:contentDescription="@string/like"
                        android:src="@drawable/like"/>
                    <ImageView
                        android:id="@+id/ivyes"
                        android:layout_width="82dp"
                        android:layout_height="76dp"
                        android:contentDescription="@string/yes"
                        android:src="@drawable/yes"/>
                    <ImageView
                        android:id="@+id/ivadd"
                        android:layout_width="82dp"
                        android:layout_height="76dp"
                        android:contentDescription="@string/more"
                        android:src="@drawable/more" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/ivdislike"
                        android:layout_width="82dp"
                        android:layout_height="76dp"
                        android:contentDescription="@string/dont_like"
                        android:src="@drawable/dontlike"/>
                    <ImageView
                        android:id="@+id/ivno"
                        android:layout_width="82dp"
                        android:layout_height="76dp"
                        android:contentDescription="@string/no"
                        android:src="@drawable/no"/>
                    <ImageView
                        android:id="@+id/ivminus"
                        android:layout_width="82dp"
                        android:layout_height="76dp"
                        android:contentDescription="@string/less"
                        android:src="@drawable/less" />
            </LinearLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true">
                <ImageView
                    android:id="@+id/home"
                    android:layout_width="64dp"
                    android:layout_height="72dp"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/home"
                    android:src="@drawable/home_no_padding"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"/>
                <ImageView
                    android:id="@+id/keyboard"
                    android:layout_width="82dp"
                    android:layout_height="76dp"
                    android:layout_toRightOf="@+id/home"
                    android:layout_toEndOf="@+id/home"
                    android:contentDescription="@string/keyboard_open"
                    android:src="@drawable/keyboard_no_padding"/>
                <ImageView
                    android:id="@+id/back"
                    android:layout_width="82dp"
                    android:layout_height="76dp"
                    android:layout_toLeftOf="@+id/home"
                    android:layout_toStartOf="@+id/home"
                    android:contentDescription="@string/back"
                    android:src="@drawable/back_no_padding"/>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>