...
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <FrameLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <ImageView
                                android:id="@+id/image1"
                                android:layout_width="94dp"
                                android:layout_height="94dp"
                                android:layout_gravity="center_horizontal"
                                android:background="@android:color/transparent"
                                android:scaleType="centerInside" />
                            <View
...
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-16dp">
        <ImageView
            android:id="@+id/ivhome"
            android:layout_width="80dp"
            android:layout_height="88dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/home"
            android:contentDescription="@string/home"/>
        <ImageView
...
